components/policies/best-practices/ban-pod-automount-sa-token/test/pod-good.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  automountServiceAccountToken: false
  containers:
    - name: container01
      image: dummyimagename
---
